<?xml version="1.0"?>
<package>
  <name>youbot_teleop</name>
  <version>1.0.0</version>
  <description>Generic keyboard teleop for KUKA youbot.</description>

  <maintainer email="nss.nikolas@gmail.com">Nikolas Semenov</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>
  <author>Graylin Trevor Jay</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
